NEON-631 hiding table until populated. needed to fix some layout issues in NEON-582 before this could be done

--- a/widgets/common/css/widgetbase.css
+++ b/widgets/common/css/widgetbase.css
@@ -85,3 +85,8 @@ html, body {
 #toggle.toggle-corners {
     border-radius: 5px;
 }
+
+.grid-canvas {
+    /* in case there are empty rows widgets that use the table, color it the same as cell color */
+    background-color: #FFFFFF;
+}
